# nmpde-project

./: .gitignore  CMakeLists.txt  README.md  justfile
data/: convergence_results.csv  energy_log.txt  error_data.csv  parsed_energy_data.csv  scaling_data.csv  scaling_results.txt
include/: Parameters.hpp  WaveEquationBase.hpp  WaveEquationBase.tpp  WaveExact.hpp  WaveLeapfrog.hpp  WaveRK4.hpp  WaveRK45.hpp  WaveTheta.hpp
notebooks/: 01_Error_Analysis.ipynb  01_Error_Analysis.ipynb:Zone.Identifier  02_Energy_Conservation.ipynb  02_Energy_Conservation.ipynb:Zone.Identifier  03_CFL_Stability.ipynb  03_HPC_Scaling.ipynb  04_Convergence_Analysis.ipynb  04_HPC_Scaling.ipynb
parameters/: default.prm  leapfrog.prm  mms_cn.prm  mms_cn_3d.prm  profile_cn.prm  rk4.prm  rk45.prm  rk45_debug.prm  theta_be.prm  theta_cn.prm  theta_cn_3d.prm  theta_fe.prm
results/: _cfl_tmp.prm  _disp_tmp.prm  _scaling_tmp.prm  _sweep_tmp.prm  cfl_stability.csv  convergence.csv  convergence_all.csv  dispersion_summary.csv  energy.csv  error.csv  index.json  scaling.csv  weak_scaling.csv
scripts/: cfl_stability_sweep.py  convergenceStudy.py  convergence_sweep.py  dispersion_sweep.py  energyAnalysis.py  energyConservationSweep.py  generate_architecture_data.py  generate_leapfrog_data.py  generate_mpi_data.py  generate_rk4_data.py  plotConvergence.py  plot_architecture.py  plot_leapfrog.py  plot_mpi.py  plot_rk4.py  run_ci_locally.sh  run_scaling.py  scalabilityStudy.py  scaling_sweep.py  viz_comparison.py  viz_leapfrog.py  viz_leapfrog_advanced.py  viz_rk4.py  weak_scaling_sweep.py
web/: app.py
(+15 files in other folders)
